--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ITC505 Lab 6 - Interactive Tool</title>
+  <title>Lab 6 - ITC505</title>
 
-  <!-- Google Font for modern look -->
+  <!-- font -->
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
     rel="stylesheet"
@@ -14,30 +14,29 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <div class="layout">
 
     <!-- HEADER -->
-    <header class="header glass-card">
-      <div class="header-left">
-        <div class="header-icon">⚙️</div>
+    <header class="header card">
+      <div class="brand-row">
+        <div class="logo-bubble">⚙️</div>
         <div>
           <h1>ITC505 · Lab 6</h1>
-          <p class="subtitle">Holy Grail Layout + JavaScript "Do Something"</p>
+          <p class="sub">Holy Grail Layout + JavaScript Tool</p>
         </div>
       </div>
 
-      <div class="header-right">
-        <div class="tag">✔ CSS Grid</div>
-        <div class="tag">✔ JS Event</div>
-        <div class="tag">✔ Last Modified</div>
+      <div class="badges">
+        <span class="badge">CSS Grid</span>
+        <span class="badge">JavaScript Event</span>
+        <span class="badge">Last Modified</span>
       </div>
     </header>
 
-    <!-- LEFT MENU / NAV -->
-    <nav class="sidebar glass-card">
-      <h2 class="sidebar-title">📂 Navigation</h2>
-      <ul class="nav-list">
+    <!-- SIDEBAR -->
+    <nav class="sidebar card">
+      <h2 class="side-title">📂 Menu</h2>
+      <ul class="side-links">
         <li><a href="#">🏠 Dashboard</a></li>
         <li><a href="#">📊 Progress</a></li>
         <li><a href="#">🍎 Nutrition</a></li>
@@ -45,60 +44,58 @@
         <li><a href="#">📞 Contact</a></li>
       </ul>
 
-      <div class="sidebar-hint">
-        <p class="hint-label">💡 Tip</p>
-        <p class="hint-body">
-          These links are just UI. They don’t have to go anywhere for this lab.
-        </p>
+      <div class="tip">
+        <div class="tip-head">💡 Tip</div>
+        <div class="tip-body">
+          These links are just UI for the lab. They don't have to work.
+        </div>
       </div>
     </nav>
 
-    <!-- MAIN CONTENT (JS FEATURE HERE) -->
-    <main class="content glass-card">
-      <!-- INTERACTIVE TOOL -->
-      <section class="tool-card inner-card">
-        <div class="section-header">
-          <h2>🔢 Number Sorter Tool</h2>
-          <p class="section-desc">
-            Enter comma-separated numbers and I’ll sort them (small → big).
-          </p>
-        </div>
+    <!-- MAIN CONTENT -->
+    <main class="main card">
 
-        <label for="numbersInput" class="input-label">
-          ✍️ Your numbers
-        </label>
+      <!-- JS TOOL -->
+      <section class="tool panel">
+        <header class="panel-head">
+          <h2>🔢 Number Sorter</h2>
+          <p class="desc">Type numbers with commas. I sort them (small → big).</p>
+        </header>
+
+        <label for="numbersInput" class="field-label">✍️ Enter numbers</label>
         <input
           id="numbersInput"
+          class="field-input"
           type="text"
-          placeholder="e.g. 42, 3, 19, 7"
+          placeholder="Example: 42, 3, 19, 7"
         />
 
-        <button id="sortBtn" class="glow-btn">
-          🚀 Sort Numbers
+        <button id="sortBtn" class="btn-do">
+          🚀 Sort
         </button>
 
-        <div class="result-block">
-          <p class="result-title"><strong>📤 Sorted Result</strong></p>
-          <p id="outputArea" class="output-area">—</p>
+        <div class="result-box">
+          <div class="result-title">📤 Sorted Result</div>
+          <div id="outputArea" class="result-value">—</div>
         </div>
 
-        <div class="error-msg" id="errorMsg"></div>
+        <div id="errorMsg" class="err"></div>
       </section>
 
-      <!-- HOW IT WORKS / EXPLANATION -->
-      <section class="how-it-works inner-card">
-        <h3>🛠 How this works</h3>
-        <ul>
-          <li>When you click the button, JavaScript reads the text box.</li>
-          <li>It splits by commas, trims spaces, converts each to a number.</li>
-          <li>Then it sorts using <code>(a, b) =&gt; a - b</code>.</li>
-          <li>If something is not a number, you get an error message.</li>
+      <!-- HOW IT WORKS -->
+      <section class="panel">
+        <h3 class="panel-subtitle">🛠 How this works</h3>
+        <ul class="info-list">
+          <li>Get the input when you click the button.</li>
+          <li>Split by "," and convert each piece to a number.</li>
+          <li>Sort using real numeric sort (a - b).</li>
+          <li>Show result on the page or show error.</li>
         </ul>
       </section>
     </main>
 
-    <!-- RIGHT AD / AMAZON -->
-    <aside class="ad glass-card">
+    <!-- AD SPACE -->
+    <aside class="ad card">
       <h2 class="ad-title">🛒 Sponsored</h2>
       <a
         href="https://www.amazon.com/Logitech-Keyboard-Backlit-Advanced-Illuminated/dp/B07S92QBCJ"
@@ -112,57 +109,47 @@
           class="ad-img"
         />
         <p class="ad-caption">
-          Logitech Wireless Keyboard<br>
-          click to view on Amazon
+          Logitech Wireless Keyboard<br />
+          Tap to view on Amazon
         </p>
       </a>
     </aside>
 
-    <!-- FOOTER / ADDENDUM / LAST MODIFIED -->
-    <footer class="footer glass-card">
+    <!-- FOOTER -->
+    <footer class="footer card">
       <section class="addendum">
-        <h2>📝 Addendum</h2>
+        <h2 class="add-title">📝 Addendum</h2>
 
-        <p><strong>Problem I solved:</strong> I built an interactive “Number Sorter” web tool.
-        The user types any comma-separated numbers and clicks a button. The page shows those
-        numbers sorted in ascending order.</p>
+        <p><b>Problem I solved:</b> I built an interactive number sorter. The user types comma-separated numbers and clicks a button. The page shows those numbers sorted from smallest to largest.</p>
 
-        <p><strong>How I solved it:</strong> This page uses a Holy Grail layout (header, left nav,
-        main content, right ad, footer) built with CSS Grid. The JavaScript lives in
-        <code>script.js</code> and is loaded into the HTML using a
-        <code>&lt;script&gt;</code> tag. The script:
+        <p><b>How I solved it:</b> The page uses a Holy Grail layout (header / left menu / main / ad / footer) with CSS Grid. The JavaScript is in <code>script.js</code>. On click, it:
         <ol>
-          <li>Reads the text box on button click.</li>
-          <li>Splits the string by commas into an array.</li>
-          <li>Trims and converts each piece to a number.</li>
-          <li>Sorts numerically (smallest → largest).</li>
-          <li>Prints the sorted array to the page.</li>
+          <li>Reads the text box value.</li>
+          <li>Splits by commas into a list.</li>
+          <li>Trims spaces and converts strings to numbers.</li>
+          <li>Sorts the numbers ascending using <code>(a,b) =&gt; a - b</code>.</li>
+          <li>Prints the sorted list into the page.</li>
         </ol>
         </p>
 
-        <p><strong>Difficulties and fixes:</strong> By default, JavaScript sorts as text,
-        which is wrong for numbers (for example "100" would come before "2"). I fixed that
-        using a custom compare function <code>(a,b) =&gt; a - b</code>. I also added error handling:
-        if any value is not a valid number, the tool shows a red error message instead of breaking.</p>
+        <p><b>Difficulties / fixes:</b> Default JavaScript sort is string sort ("100" comes before "2"). I fixed that by passing a compare function. I also added error handling to show a red warning if the input has something that's not a number.</p>
       </section>
 
-      <section class="last-updated">
-        <p>⏱ Last updated:
-          <span id="lastModified"></span>
-        </p>
+      <section class="last">
+        ⏱ Last updated:
+        <span id="lastModified"></span>
       </section>
     </footer>
 
   </div><!-- /layout -->
 
-  <!-- JavaScript file -->
+  <!-- page logic -->
   <script src="script.js"></script>
 
-  <!-- REQUIRED lastModified script from assignment -->
-  <script type="text/javascript">
+  <!-- required lastModified script -->
+  <script>
     var x = document.lastModified;
     document.getElementById('lastModified').textContent = x;
   </script>
-
 </body>
 </html>
